--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,11 @@ body {
     background-color: white;
 }
 .header-logo { color: #2E2F42;
-    font-family: 'Roboto' sans-serif;
-
+    font-size: 18px;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 21;
+    letter-spacing: 3%
 }
 
 .accent  { color: #4D5AE5;
@@ -13,4 +16,83 @@ body {
     font-weight: bold;
     line-height: 21;
     letter-spacing: 3%;
+}
+.link-page .link { 
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24;
+    letter-spacing: 2%;
+}
+.link {
+    color: #2E2F42;
+}
+.link-contact .link  { color: #434455;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24;
+    letter-spacing: 2%;
+
+}
+.ferst-page {
+    background-color: #2E2F42;
+}
+.ferst-title {
+    color: #FFFFFF;
+    font-size: 56px;
+    font-weight: 700;
+    line-height: 60px;
+    letter-spacing: 2%;
+    align-self: center;
+}
+button {
+    background-color: #4D5AE5;
+box-shadow: 0, 4, 4, #000000;
+}
+.button-ferst {
+    color: #FFFFFF;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 4%;
+}
+.second-title {
+    color: #2E2F42;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 40px;
+    letter-spacing: 2%;
+    align-self: center;
+}
+.third-title { color: #2E2F42;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 2%;
+}
+.third-page { background-color: #F4F4FD;
+
+}
+p {
+    color: #434455;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 2%;
+}
+footer {
+    background-color: #2E2F42;
+}
+.footer a{ color: #F4F4FD;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: bold;
+    line-height: 21;
+    letter-spacing: 3%
+}
+.footer p {
+    color: #F4F4FD;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 2%;
 }
