--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ a {
     font-style: normal;
     font-weight: 700;
     line-height: 21;
-    letter-spacing: 3%
+    letter-spacing: 3%;
 }
 .accent  { color: #4D5AE5;
     font-family: 'Raleway', sans-serif;
@@ -58,7 +58,7 @@ a {
 }
 button {
     background-color: #4D5AE5;
-box-shadow: 0, 4, 4, #000000;
+box-shadow: 0px 4px 4px #000000;
 }
 .button-ferst {
     color: #FFFFFF;
@@ -119,7 +119,7 @@ footer {
     font-style: normal;
     font-weight: bold;
     line-height: 21;
-    letter-spacing: 3%
+    letter-spacing: 3%;
 }
 .footer p {
     color: #F4F4FD;
