--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,4 @@
 body {
-    font-family: 'Roboto','Raleway', sans-serif;
     background-color: white;
 }
 ul {
@@ -28,6 +27,7 @@ a {
     letter-spacing: 3%;  
 }
 .link-page{ 
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
@@ -39,6 +39,7 @@ a {
     color: #434455;
 }
 .link-contact  { 
+    font-family: 'Roboto', sans-serif;
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -49,6 +50,7 @@ a {
     background-color: #2E2F42;
 }
 .ferst-title {
+    font-family: 'Roboto', sans-serif;
     color: #FFFFFF;
     font-size: 56px;
     font-weight: 700;
@@ -58,9 +60,9 @@ a {
 }
 button {
     background-color: #4D5AE5;
-box-shadow: 0px 4px 4px #000000;
 }
 .button-ferst {
+    font-family: 'Roboto', sans-serif;
     color: #FFFFFF;
     font-size: 16px;
     font-weight: 500;
@@ -69,6 +71,7 @@ box-shadow: 0px 4px 4px #000000;
     text-align: center;
 }
 .second-title {
+    font-family: 'Roboto', sans-serif;
     color: #2E2F42;
     font-size: 36px;
     font-weight: 700;
@@ -77,6 +80,7 @@ box-shadow: 0px 4px 4px #000000;
     text-align: center;
 }
 .third-title-left { color: #2E2F42;
+    font-family: 'Roboto', sans-serif;
     font-size: 20px;
     font-weight: 500;
     line-height: 24px;
@@ -84,6 +88,7 @@ box-shadow: 0px 4px 4px #000000;
     text-align: left;
 }
 .paragraph-left {
+    font-family: 'Roboto', sans-serif;
     color: #434455;
     font-size: 16px;
     font-weight: 400;
@@ -95,6 +100,7 @@ box-shadow: 0px 4px 4px #000000;
 
 }
 .third-title {
+    font-family: 'Roboto', sans-serif;
     color: #2E2F42;
     font-size: 20px;
     font-weight: 500;
@@ -103,6 +109,7 @@ box-shadow: 0px 4px 4px #000000;
     text-align: center;
 }
 .paragraph-center {
+    font-family: 'Roboto', sans-serif;
     color: #434455;
     font-size: 16px;
     font-weight: 400;
@@ -122,6 +129,7 @@ footer {
     letter-spacing: 3%;
 }
 .footer p {
+    font-family: 'Roboto', sans-serif;
     color: #F4F4FD;
     font-size: 16px;
     font-weight: 400;
