--- a/css/styles.css
+++ b/css/styles.css
@@ -142,11 +142,11 @@ footer {
 }
 .footer a { color: #4D5AE5;
     font-family: 'Raleway', sans-serif;
+    font-weight: 700;
     font-size: 18px;
-    font-style: normal;
-    font-weight: bold;
-    line-height: 21;
+    line-height: 1.17;
     letter-spacing: 0.03em;
+    text-transform: uppercase;
 }
 .footer p {
     color: #F4F4FD;
