--- a/css/styles.css
+++ b/css/styles.css
@@ -3,15 +3,65 @@ body {
     color: #434455;
     background-color: white;
 }
+
 ul {
     list-style-type: none;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
 }
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+
 a {
     text-decoration: none;
 }
+
+
+/* --------------------  Header  ------------------------- */
+
+
+.container{
+    width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+}
+.wrap{
+    display: flex;
+    justify-content: space-between;
+}
+.navigation{
+    display: flex;
+}
+
+.header-menu-list{
+    display: flex;
+    gap: 40px;
+    margin-left: 76px;
+}
+
+.address-link{
+    display: flex;
+    gap: 40px;
+}
+
 .page-header {
     background-color: #E7E9FC;
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
+
 .header-logo { color: #4D5AE5;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
@@ -20,6 +70,7 @@ a {
     letter-spacing: 0.03em;
     text-transform: uppercase
 }
+
 .accent  { color: #2E2F42;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
@@ -28,6 +79,7 @@ a {
     letter-spacing: 0.03em;
     text-transform: uppercase
 }
+
 .link-page{ 
     font-weight: 500;
     font-size: 16px;
@@ -35,29 +87,48 @@ a {
     letter-spacing: 0.02em;
     color: #2E2F42;
 }
+
 .link-page:hover,
 .link-page:focus {
     color: #404bbf ;
 }
+
 .address {
     font-style: normal;
+    
 }
+
 .contacts .link-contact {
     color: #434455;
 }
+
 .link-contact  { 
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
+
 }
+
 .link-contact:hover,
 .link-contact:focus {
     color: #404bbf ;
 }
+
+
+
+/* --------------  Main  -------------------- */
+
+
+
 .ferst-page {
+    padding-bottom: 120px;
+    
+}
+.fon {
     background-color: #2E2F42;
 }
+
 .ferst-title {
     font-family: 'Roboto', sans-serif;
     color: #FFFFFF;
@@ -66,40 +137,78 @@ a {
     line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
-}
+    max-width: 496px;
+    padding-top: 188px;
+    margin: 0 auto;
+    }
+
 button {
     background-color: #4D5AE5;
+    border-radius: 4px;
+    cursor: pointer;
+    display: block;
+   
 }
+.button-order{
+    padding-bottom: 188px;
+}
+
 .button-ferst {
     font-family: 'Roboto', sans-serif;
     color: #FFFFFF;
+    border: none;
+    border-radius: 4px;
     font-weight: 500;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.04em;
-    cursor: pointer;
+    margin-top: 48px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 16px 32px;
+
 }
+
 button:hover,
 button:focus {
     background-color: #404BBF;
 }
-.second-title {
-    font-family: 'Roboto', sans-serif;
-    color: #2E2F42;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.11;
-    letter-spacing: 0.02em;
-    text-align: center;
-    text-transform: capitalize;
+
+.second-page {
+    padding-bottom: 120px;
 }
+
+.second-link{
+    display: flex;
+    gap: 24px;
+}
+
+.link-paragraph{
+   width: calc((100% - 3 * 24px) / 4);
+}
+.second-title {
+        position: absolute;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        border: 0;
+        padding: 0;
+        white-space: nowrap;
+        clip-path: inset(100%);
+        clip: rect(0 0 0 0);
+        overflow: hidden;
+
+}
+
 .third-title-left { color: #2E2F42;
     font-weight: 500;
     font-size: 20px;
     line-height: 120%;
     letter-spacing: 0.02em;
     text-align: left;
+    margin-bottom: 8px;
 }
+
 .paragraph-left {
     color: #434455;
     font-weight: 400;
@@ -108,11 +217,16 @@ button:focus {
     letter-spacing: 0.02em;
     text-align: left;
 }
-.third-page { background-color: #F4F4FD;
+
+.third-page { 
+    background-color: #F4F4FD;
+    padding-bottom: 120px;
 }
+
 .list {
     background-color: white;
 }
+
 .third-title {
     color: #2E2F42;
     font-weight: 500;
@@ -121,6 +235,7 @@ button:focus {
     letter-spacing: 0.02em;
     text-align: center;
 }
+
 .paragraph-center {
     color: #434455;
     font-weight: 400;
@@ -129,9 +244,15 @@ button:focus {
     letter-spacing: 0.02em;
     text-align: center;
 }
+
+.fourth-page{
+    padding-bottom: 120px;
+}
+
 footer {
     background-color: #2E2F42;
 }
+
 .accent-footer  { color: #F4F4FD;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
@@ -140,6 +261,7 @@ footer {
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
+
 .footer a { color: #4D5AE5;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
@@ -148,6 +270,7 @@ footer {
     letter-spacing: 0.03em;
     text-transform: uppercase;
 }
+
 .footer p {
     color: #F4F4FD;
     font-size: 16px;
