--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ img{
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
-}
+    }
 .wrap{
     display: flex;
     justify-content: space-between;
@@ -64,6 +64,7 @@ img{
     background-color: #E7E9FC;
     padding-top: 24px;
     padding-bottom: 24px;
+    border-bottom: 1px solid #e7e9fc;
 }
 
 .header-logo { color: #4D5AE5;
@@ -141,7 +142,7 @@ img{
     line-height: 1.07;
     letter-spacing: 0.02em;
     text-align: center;
-    max-width: 496px;
+    width: 496px;
     padding-top: 188px;
     margin: 0 auto;
     }
