--- a/css/styles.css
+++ b/css/styles.css
@@ -149,7 +149,6 @@ img{
 
 button {
     background-color: #4D5AE5;
-    border-radius: 4px;
     cursor: pointer;
     display: block;
    
@@ -170,7 +169,8 @@ button {
     margin-top: 48px;
     margin-left: auto;
     margin-right: auto;
-    padding: 16px 32px;
+    min-width: 169px;
+    height: 56px;
 
 }
 
