--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,27 @@ img{
     display: block;
 }
 
+header {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: row; 
+    margin: 0px;
+}
+
+button {
+    background-color: #4D5AE5;
+    cursor: pointer;
+    display: block;
+    min-width: 169px;
+    height: 56px;
+   
+}
+
+button:hover,
+button:focus {
+    background-color: #404BBF;
+}
 
 /* --------------------  Header  ------------------------- */
 
@@ -47,6 +68,7 @@ img{
 }
 .navigation{
     display: flex;
+    padding: 24px 0;
 }
 
 .header-menu-list{
@@ -61,9 +83,6 @@ img{
 }
 
 .page-header {
-    background-color: #E7E9FC;
-    padding-top: 24px;
-    padding-bottom: 24px;
     border-bottom: 1px solid #e7e9fc;
 }
 
@@ -100,6 +119,7 @@ img{
 
 .address {
     font-style: normal;
+    padding: 24px 0;
     
 }
 
@@ -147,12 +167,7 @@ img{
     margin: 0 auto;
     }
 
-button {
-    background-color: #4D5AE5;
-    cursor: pointer;
-    display: block;
-   
-}
+
 .button-order{
     padding-bottom: 188px;
 }
@@ -169,15 +184,11 @@ button {
     margin-top: 48px;
     margin-left: auto;
     margin-right: auto;
-    min-width: 169px;
-    height: 56px;
+   
 
 }
 
-button:hover,
-button:focus {
-    background-color: #404BBF;
-}
+
 
 
 
