--- a/css/styles.css
+++ b/css/styles.css
@@ -62,19 +62,21 @@ button:focus {
     padding-right: 15px;
     margin: 0 auto;
     }
-.wrap{
+
+.flex{
     display: flex;
     justify-content: space-between;
 }
 .navigation{
     display: flex;
+    align-items: center;
     padding: 24px 0;
 }
 
 .header-menu-list{
     display: flex;
     gap: 40px;
-    margin-left: 76px;
+    
 }
 
 .address-link{
@@ -92,7 +94,8 @@ button:focus {
     font-size: 18px;
     line-height: 117%;
     letter-spacing: 0.03em;
-    text-transform: uppercase
+    text-transform: uppercase;
+    margin-right: 76px;
 }
 
 .accent  { color: #2E2F42;
