--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ h1 {
 .header-menu-list{
     display: flex;
     gap: 40px;
-    padding: 24px 0;
+    padding: 24px 0px;
 }
 
 
@@ -90,7 +90,7 @@ h1 {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     margin-right: 76px;
-    padding: 24px 0;
+    padding: 24px 0px;
 }
 
 .accent  { color: #2E2F42;
