--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ h1 {
 
 .header-menu-list{
     display: flex;
-    gap: 40px;
+       gap: 40px;
 }
 
 
@@ -102,21 +102,49 @@ h1 {
     text-transform: uppercase
 }
 
-.link-page{ 
+.header-menu-item { 
     font-weight: 500;
     font-size: 16px;
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #2E2F42;
-    padding: 24px 0px;
-    display: block; 
+}
+
+.link-page {
+    color: #2e2f42;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    display: block;
+    position: relative;
+}
+
+
+.link-page::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 4px;
+    background-color: #ffffff;
+    border-radius: 2px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 .link-page:hover,
 .link-page:focus {
-    color: #404bbf ;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #404bbf; ;
 }
 
+.link-page:hover::after,
+.link-page:focus::after {
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #404bbf; ;
+}
 .address {
     font-style: normal;
     
@@ -139,9 +167,14 @@ h1 {
 .link-contact:hover,
 .link-contact:focus {
     color: #404bbf ;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
+/* .link-contact:hover::after,
+.link-contact:focus::after {
+    color: #404bbf ;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} */
 
 /* --------------  Main  -------------------- */
 
@@ -149,8 +182,11 @@ h1 {
 
 .ferst-page {
     background-color: #2e2f42;
-    /* text-align: center; */
     padding: 188px 0;
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/images/фон.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 
@@ -189,6 +225,8 @@ h1 {
     cursor: pointer;
     background-color: #4D5AE5;
     display: block;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -212,6 +250,26 @@ h1 {
 .second-link{
     display: flex;
     gap: 24px;
+}
+
+.icon-features{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+    width: 264px;
+    height: 112px;
+    background-color: #f4f4fd;
+    margin-bottom: 8px;
+}
+
+.icon-features-item{
+    background-color: #f4f4fd;
+    display: flex;
+    fill: #f4f4fd;
+    justify-content: center;
+    align-items: center;
 }
 
 .link-paragraph{
@@ -317,6 +375,16 @@ h3 {
     text-align: center;
 }
 
+.team-title {
+    color: #434455;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
+    text-align: center;
+    margin-bottom: 8px;
+
+}
 .card-list {
     display: flex;
     align-items: center;
@@ -324,6 +392,39 @@ h3 {
     gap: 24px;
 }
 
+
+.social-link-team {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    padding-left: 16px;
+    padding-right: 16px;
+}
+
+.social-link-item{
+    width: 40px;
+    height: 40px;
+    
+}.icon-link{
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-link:hover,
+.icon-link:focus {
+background-color: #404bbf;
+}
+
+.icon-icon {
+    fill: #f4f4fd;
+    
+}
 
 
 
@@ -344,13 +445,40 @@ h3 {
 }
 
 .card-fourth {
-    width: calc((100% - 2 * 24px) / 3);
+    /* width: calc((100% - 2 * 24px) / 3); */
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+        0px 1px 1px rgba(46, 47, 66, 0.16),
+        0px 2px 1px rgba(46, 47, 66, 0.08);
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.main-wrap {
+    position: relative;
+        overflow: hidden;
+}
+
+.main-cover {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    background-color: #4d5ae5;
+    color: #f4f4fd;
+    padding: 40px 32px;
+    height: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.card-fourth:hover .main-cover {
+    transform: translateY(0%);
 }
 
 .fourth-content{
-    border-bottom: 1px solid #E7E9FC;
-    border-left: 1px solid #E7E9FC;
-    border-right: 1px solid #E7E9FC;
+    border: 1px solid #e7e9fc;
+    border-top: none;
     padding: 32px 16px;
 }
 
@@ -362,10 +490,16 @@ h3 {
 
 footer {
     background-color: #2e2f42;
-    align-items: flex-start;
-    justify-content: flex-start;
-    flex-direction: column;
     padding: 100px 0;
+}
+
+.footer-flex {
+    width: 1158px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: 0 auto;
+    display: flex;
+    align-items: baseline;
 }
 
 
@@ -378,20 +512,20 @@ footer {
     text-transform: uppercase;
 }
 .logo-footer{
-    margin-bottom: 16px;
-    display: inline-block;
-}
-
-.footer a { color: #4D5AE5;
+    color: #4D5AE5;
     font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    text-align: left;
+    margin-bottom: 16px;
+    display: inline-block;
 }
 
-.footer p {
+
+.paragraph-footer {
     color: #F4F4FD;
     font-size: 16px;
     font-weight: 400;
@@ -399,4 +533,55 @@ footer {
     letter-spacing: 0.02em;
     text-align: left;
     max-width: 264px;
+}
+
+.footer-logo{
+    margin-right: 120px;
+}
+
+.footer-wrap{
+    margin-left: 120px;
+}
+
+.footer-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin-bottom: 16px;
+    margin-top: 0;
+}
+
+.icon-item-footer {
+    width: 40px;
+    height: 40px;
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-link-footer {
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-link-footer:hover,
+.icon-link-footer:focus{
+    background-color: #31d0aa;;
+}
+
+.icon-list-footer {
+    display: flex;
+    gap: 16px;
+    margin: 0 auto;
+    padding-left: 0;
+}
+
+.icon-icon-footer {
+    fill: #f4f4fd;
 }
