--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,10 @@ h1 {
 
 .page-header {
     border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 1px 6px rgba(46, 47, 66, 0.08);
+
 }
 
 .header-logo { color: #4D5AE5;
@@ -111,7 +115,7 @@ h1 {
 }
 
 .link-page {
-    color: #2e2f42;
+    color: #404bbf;
     padding-top: 24px;
     padding-bottom: 24px;
     display: block;
@@ -142,7 +146,6 @@ h1 {
 
 .link-page:hover::after,
 .link-page:focus::after {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     background-color: #404bbf; ;
 }
 .address {
