--- a/css/styles.css
+++ b/css/styles.css
@@ -53,6 +53,13 @@ h1 {
 
 /* --------------------  Header  ------------------------- */
 
+.header {
+    border-bottom: 1px solid #e7e9fc;
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+     0px 1px 1px rgba(46, 47, 66, 0.16),
+      0px 1px 6px rgba(46, 47, 66, 0.08);
+
+}
 
 .container{
     width: 1158px;
@@ -77,14 +84,6 @@ h1 {
        gap: 40px;
 }
 
-
-.page-header {
-    border-bottom: 1px solid #e7e9fc;
-    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16),
-    0px 1px 6px rgba(46, 47, 66, 0.08);
-
-}
 
 .header-logo { color: #4D5AE5;
     font-family: 'Raleway', sans-serif;
@@ -173,23 +172,24 @@ h1 {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/* .link-contact:hover::after,
-.link-contact:focus::after {
-    color: #404bbf ;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
 
 /* --------------  Main  -------------------- */
 
 
 
 .ferst-page {
-    background-color: #2e2f42;
-    padding: 188px 0;
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(/images/фон.jpg);
+    background-color:#2e2f42;
+    padding-top: 188px;
+    padding-bottom: 188px;
+    margin: 0 auto;
+    max-width: 1440px;
+    background-image: linear-gradient(    
+    rgba(46, 47, 66, 0.7), 
+    rgba(46, 47, 66, 0.7)), 
+    url(../images/фон.jpg);
     background-repeat: no-repeat;
-    background-size: cover;
     background-position: center;
+    background-size: cover;
 }
 
 
@@ -344,6 +344,9 @@ h3 {
     margin: 0; 
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px; 
+    box-shadow:0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .card-text {
