--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,17 @@ h1 {
     max-width: 496px; 
 }
 
+
+
+.container {
+    width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
+
+
+
 /* --------------------  Header  ------------------------- */
 
 .header {
@@ -58,76 +69,56 @@ h1 {
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 1px 6px rgba(46, 47, 66, 0.08);
-
 }
 
-.container{
-    width: 1158px;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin: 0 auto;
-    }
-
-.flex{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.navigation{
+.header-container {
     display: flex;
     align-items: center;
     
 }
 
-.header-menu-list{
-    display: flex;
-       gap: 40px;
-}
-
-
-.header-logo { color: #4D5AE5;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 117%;
-    letter-spacing: 0.03em;
+.logo {
+    color: #4d5ae5;
+    font-family: "Raleway", sans-serif;
     text-transform: uppercase;
-    margin-right: 76px;
-    padding: 24px 0px;
-}
-
-.accent  { color: #2E2F42;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
     font-size: 18px;
-    line-height: 117%;
+    font-weight: 700;
+    line-height: 1.17 ;
     letter-spacing: 0.03em;
-    text-transform: uppercase
+    text-align: left;
+    margin-right: 76px;
 }
-
-.header-menu-item { 
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 150%;
-    letter-spacing: 0.02em;
+.accent {
     color: #2E2F42;
 }
 
-.link-page {
-    color: #2e2f42;;
-    padding-top: 24px;
-    padding-bottom: 24px;
-    display: block;
+.navigation {
+    display: flex;
+    align-items: center;
+
+}
+
+.nav-list {
+    display: flex;
+    gap: 40px;
 }
 
 
-.link-page.studio {
+.nav-iteam {
+    font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+}
+
+.nav-iteam-link.studio {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
     color: #404bbf;
 }
 
-.link-page.studio::after {
+.nav-iteam-link.studio::after {
     content: '';
     position: absolute;
     left: 0;
@@ -141,46 +132,30 @@ h1 {
 
 }
 
-.link-page:hover,
-.link-page:focus {
+.nav-iteam-link {
+    color: #2e2f42;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    display: block;
+}
+
+.nav-iteam-link:hover,
+.nav-iteam-link:focus {
     color: #404BBF;
 }
 
-/* 
-.link-page::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    display: block;
-    width: 100%;
-    height: 4px;
-    border-radius: 4px;
-    background-color: #ffffff;
-    border-radius: 2px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
-}
 
-.link-page:hover,
-.link-page:focus {
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    color: #404bbf; ;
-}
-
-.link-page:hover::after,
-.link-page:focus::after {
-    background-color: #404bbf; ;
-} */
 .address {
     font-style: normal;
     margin-left: auto;
-    
 }
 
-
-
-.link-contact  { 
+.address-list{
+    display: flex;
+    gap: 40px;
+   
+}
+.address-iteam{
     color: #434455;
     font-family: "Roboto", sans-serif;
     font-size: 16px;
@@ -191,12 +166,15 @@ h1 {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
-.link-contact.email:hover,
-.link-contact.phone-number:focus {
-    color: #404bbf ;
-    
+.phone-number{
+    color: inherit;
 }
+
+.address-iteam.email:hover ,
+.phone-number:hover{
+    color: #404BBF;
+}
+
 
 
 /* --------------  Main  -------------------- */
@@ -212,7 +190,7 @@ h1 {
     background-image: linear-gradient(    
     rgba(46, 47, 66, 0.7), 
     rgba(46, 47, 66, 0.7)), 
-    url(../images/фон.jpg);
+    url(../images/first-screen.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
