--- a/css/styles.css
+++ b/css/styles.css
@@ -162,6 +162,7 @@ h1 {
     padding-top: 24px;
     padding-bottom: 24px;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-menu-link:hover,
 .header-menu-link:focus {
