--- a/css/styles.css
+++ b/css/styles.css
@@ -137,24 +137,20 @@ h1 {
     
 }
 
-.header-menu-link.studio {
+.header-menu-link.current {color: #2e2f42;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     position: relative;
-    color: #404bbf;
 }
 
-.header-menu-link.studio::after{
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    display: block;
-    width: 100%;
-    height: 4px;
-    border-radius: 4px;
-    background-color: #404bbf;
-    border-radius: 2px;
-    
+.header-menu-link.current::after {
+content: "";
+position: absolute;
+left: 0;
+bottom: -1px;
+height: 4px;
+background-color: #fff;
+border-radius: 2px;
+width: 100%;
 } 
 
 .header-menu-link {
@@ -167,6 +163,11 @@ h1 {
 .header-menu-link:hover,
 .header-menu-link:focus {
     color: #404bbf;
+}
+
+.header-menu-link.current:hover::after,
+.header-menu-link.current:focus:after{
+    background-color: #404bbf;
 }
 
 .header-address {
@@ -283,7 +284,6 @@ h1 {
     align-items: center;
     border: 1px solid #8e8f99;
     border-radius: 4px;
-    width: 264px;
     height: 112px;
     background-color: #f4f4fd;
     margin-bottom: 8px;
@@ -474,11 +474,12 @@ background-color: #404bbf;
 
 .card-fourth {
     /* width: calc((100% - 2 * 24px) / 3); */
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-        0px 1px 1px rgba(46, 47, 66, 0.16),
-        0px 2px 1px rgba(46, 47, 66, 0.08);
-        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
+
+.card-fourth:hover {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 
 .main-wrap {
     position: relative;
@@ -567,9 +568,7 @@ footer {
     margin-right: 120px;
 }
 
-.footer-wrap{
-    margin-left: 120px;
-}
+
 
 .footer-text {
     font-weight: 500;
