--- a/css/styles.css
+++ b/css/styles.css
@@ -137,21 +137,20 @@ h1 {
     
 }
 
-.header-menu-link.current {color: #2e2f42;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.header-menu-link.current {color: #404bbf;
     position: relative;
 }
 
 .header-menu-link.current::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    height: 4px;
-    background-color: #404bbf;
-    border-radius: 2px;
-    width: 100%;
-    }
+content: "";
+position: absolute;
+left: 0;
+bottom: -1px;
+height: 4px;
+background-color: #404bbf;
+border-radius: 2px;
+width: 100%;
+}
 
 .header-menu-link {
     color: #2e2f42;
@@ -165,10 +164,10 @@ h1 {
     color: #404bbf;
 }
 
-/* .header-menu-link.current:hover::after,
+.header-menu-link.current:hover::after,
 .header-menu-link.current:focus:after{
     background-color: #404bbf;
-} */
+}
 
 .header-address {
     font-style: normal;
