--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,10 @@ img{
     display: block;
 }
 
+input {
+    outline: none;
+  }
+
 header {
     display: flex;
     align-items: center;
@@ -611,3 +615,347 @@ footer {
 .icon-icon-footer {
     fill: #f4f4fd;
 }
+
+.footer-subscribe {
+    margin-left: 80px;
+  }
+  .subscribe {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+      font-size: 16px;
+      line-height: 150%;
+      letter-spacing: 0.02em;
+      color: #fff;
+      margin-bottom: 16px;
+  }
+  .subs-form {
+      display: flex;
+        gap: 24px;
+  }
+  .subs-form-label {
+    gap: 28px;
+  }
+  .footer-button-subs {
+    display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: row;
+      border-radius: 4px;
+        padding: 8px 24px;
+        height: 40px;
+        background: #4d5ae5;
+        font-family: "Roboto", sans-serif;
+        font-weight: 500;
+          font-size: 16px;
+          line-height: 150%;
+          letter-spacing: 0.04em;
+          text-align: center;
+          color: #fff;
+          outline: none;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                min-width: 165px;
+                border: none;
+  }
+  .footer-input-email {
+    border: 1px solid #fff;
+      border-radius: 4px;
+      width: 264px;
+      height: 40px;
+      box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+      background-color: transparent;
+      font-weight: 400;
+        font-size: 12px;
+        line-height: 200%;
+        letter-spacing: 0.04em;
+        color: #fff;
+        font-family: "Roboto", sans-serif;
+        padding-left: 16px;
+  }
+  .footer-input-email::placeholder {
+    
+    font-weight: 400;
+      font-size: 12px;
+      line-height: 200%;
+      letter-spacing: 0.04em;
+      color: #fff;
+  }
+  ::placeholder {
+    color: #ffffff;}
+  .footer-button-subs:focus,
+  .footer-button-subs:hover {
+    background-color: #404bbf;
+  }
+  .telega-icons {
+    margin-left: 16px;
+    fill: #fff;
+  }
+
+
+
+
+
+  /*<---------------------MODAL------------------->*/
+
+
+
+  .modal-overlay{
+    background-color: rgba(46, 47, 66, 0.4);
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-overlay.is-open{
+    opacity: 1;
+    pointer-events: auto;
+
+}
+
+.modal{
+    width: 408px;
+    min-height: 584px;
+    overflow-y: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
+        0px 1px 3px rgba(0, 0, 0, 0.12),
+        0px 2px 1px rgba(0, 0, 0, 0.2);;
+    background-color: #fcfcfc;
+    padding: 72px 24px 24px 24px;
+    border-radius: 4px;
+
+
+} 
+
+.exit-button {
+    position: absolute;
+    width: 24px;
+    height: 24px;
+    top: 24px;
+    right: 24px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.exit-icon{
+     fill: #2e2f42;
+     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     
+}
+
+.exit-button:hover .exit-icon,
+.exit-button:focus .exit-icon{
+    background-color: #404BBF;
+    border: none;
+    fill: #ffffff;
+}
+
+.exit-button:hover,
+.exit-button:focus {
+    background-color: #404BBF;
+    border: none;
+}
+
+.window-titel {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+    color: #2e2f42;
+    margin-bottom: 16px;
+}
+
+
+.form-field {
+    margin-bottom: 8px;
+}
+
+.form-label {
+    display: block;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+    margin-bottom: 4px;
+}
+
+.form-input-wrap {
+    position: relative;
+    margin-bottom: 8px;
+}
+
+.form-input {
+    background-color: transparent;
+    outline: transparent;
+    color: rgb(46, 47, 66);
+    width: 100%;
+    height: 40px;
+    padding-left: 38px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 4%;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+}
+
+.form-input:focus{
+    border-color: #4d5ae5;
+}
+
+.form-icon {
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4,0, 0.2,1);
+}
+
+.form-input:focus + .form-icon{
+    fill: #4d5ae5;
+}
+
+.form-comment {
+    width: 100%;
+    height: 120px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    padding-left: 38px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    outline: transparent;
+    padding: 8px 16px;
+    resize: none;
+    background-color: transparent;
+}
+
+.form-comment:focus{
+    border-color: #4d5ae5;
+
+}
+.form-field.comment{
+    margin-bottom: 16px;
+}
+
+.form-comment::placeholder{
+    font-family: "Roboto", sans-serif;
+  font-weight: 400;
+    font-size: 12px;
+    line-height: 117%;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
+    
+}
+.privacy {
+    margin-bottom: 24px;
+}
+
+
+.check-text {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;}
+
+.check-span {
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border-color: #8e8f99;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+            fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    margin-right: 8px;
+}
+
+.form-check:checked + .check-text span{
+    background-color: #404BBF;
+    border: none;
+    fill: #f4f4fd;
+}
+
+.link-privacy {
+    line-height: 1.33;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
+}
+
+.submit-button{
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background: #4d5ae5;
+     border-radius: 4px;
+    padding: 16px 32px;
+    min-width: 169px;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+    font-family: inherit;
+    cursor: pointer;
+    margin: 0 auto;
+    display: block;
+    border: none;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.submit-button:hover,
+.submit-button:focus {
+    background-color: #404bbf;
+}
+
+/* .visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+} */
+
+
+
+
+  
