--- a/css/styles.css
+++ b/css/styles.css
@@ -303,7 +303,7 @@ width: 100%;
 .link-paragraph{
    width: calc((100% - 3 * 24px) / 4);
 }
-.item-hidden {
+.visually-hidden {
         position: absolute;
         width: 1px;
         height: 1px;
@@ -652,9 +652,11 @@ footer {
           text-align: center;
           color: #fff;
           outline: none;
+          cursor: pointer ;
             transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
                 min-width: 165px;
                 border: none;
+                
   }
   .footer-input-email {
     border: 1px solid #fff;
@@ -872,7 +874,7 @@ footer {
     line-height: 117%;
     letter-spacing: 0.04em;
     color: rgba(46, 47, 66, 0.4);
-    
+
 }
 .privacy {
     margin-bottom: 24px;
